--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,24 @@ a{
 }
 
 /* Navbar */
+
+
+/* Modal */
+.modal{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.paper{
+    background-color: lightgrey;
+    border: 2px solid #000;
+    box-shadow: 2px 2px 7px 1px grey;
+    padding: 20px;
+}
+/* Modal */
+
+.userAuth{
+    display: flex;
+    flex-direction: column;
+}
