--- a/src/Post.css
+++ b/src/Post.css
@@ -5,6 +5,11 @@
     margin-bottom: 50px;
 }
 
+.Post span{
+    font-weight: 500;
+    margin-left: 15px;
+}
+
 .Post img{
     width: 100%;
     object-fit: contain;
@@ -19,6 +24,14 @@
     padding: 5px;
 }
 
+.post_footerlike{
+    padding-left: 10px;
+}
+
+.post_footersave{
+    padding-right: 10px;
+}
+
 .post_userinfo{
     display: flex;
     justify-content: space-between;
@@ -26,10 +39,6 @@
     margin: 5px;
 }
 
-.Post span{
-    font-weight: 500;
-    margin-left: 15px;
-}
 
 .post_more{
     padding-right: 10px;
@@ -78,5 +87,5 @@
 }
 
 .post_commentform button:disabled{
-    color: lightskyblue;
+    color: rgb(144, 212, 255);
 }
