--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@
     margin: 0; 
     font-family: -apple-system, BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;;
 }
+
+::-webkit-scrollbar{
+    display: none;
+}
+
 ul{
     list-style-type: none;
 }
@@ -13,6 +18,12 @@ a{
 
 .App{
     background-color: #fafafa;
+}
+
+.container{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 110px;
 }
 
 .container, .nav_container{
@@ -26,6 +37,10 @@ a{
 .app_nav{
     background-color: white;
     border-bottom: 1px solid lightgrey;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
 }
 
 .nav_container{
@@ -61,4 +76,10 @@ a{
 .userAuth{
     display: flex;
     flex-direction: column;
+}
+
+
+.embed{
+    position: fixed;
+    right: 12%;
 }
