You can Add posts

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
     font-family: -apple-system, BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;;
 }
 
+html{
+    background-color: #fafafa;
+}
+
 ::-webkit-scrollbar{
     display: none;
 }
@@ -30,6 +34,15 @@ a{
 }
 
 .embed{
-    position: fixed;
-    right: 12%;
+    position: relative;
+}
+
+@media screen and (max-width: 900px) {
+	.embed{
+        display: none;
+    }
+
+    .container{
+        justify-content: center;
+    }
 }
