--- a/src/Profile.css
+++ b/src/Profile.css
@@ -6,7 +6,8 @@
     width: 70%;
     margin: 0 auto;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    flex-direction: row;
 }
 
 .profile_info span{
@@ -27,6 +28,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    text-align: center;
 }
 
 .profile_infotext p {
@@ -43,4 +45,18 @@
 .activeLink{
     border-top:1px solid black;
     color: black;
+}
+
+
+@media screen and (max-width: 750px){
+    .profile_info{
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .profile_info h1{
+        font-size: 24px;
+    }
 }
