--- a/src/PostGrid.css
+++ b/src/PostGrid.css
@@ -22,4 +22,27 @@
     height: 100%;
     width: 100%;
     object-fit: cover;
+    user-select: none;
+}
+
+.overlay{
+    position: relative;
+    bottom: 101%;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .2s ease;
+    background-color: rgba(0, 0, 0, 0.3);
+    text-align: center;
+    font-weight: 600;
+}
+
+.overlay:hover {
+    opacity: 1;
+}
+
+.overlay_content li{
+    padding-top: 50%;
+    color: whitesmoke;
+    user-select: none;
 }
