--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@ a{
     display: flex;
     justify-content: space-between;
     margin-top: 110px;
+    margin-bottom: 100px;
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
