--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@ a{
     margin-top: 110px;
     margin-bottom: 100px;
     max-width: 1000px;
+    width: 100%;
     margin-left: auto;
     margin-right: auto;
 }
