--- a/src/PostGrid.css
+++ b/src/PostGrid.css
@@ -65,11 +65,20 @@
     }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 600px) {
     .gridItem{
         height: 150px;
         width: 30%;
-        margin: 5px 1.5%;
+        margin: 5px 1.3%;
+    }
+}
+
+
+@media screen and (max-width: 450px) {
+    .gridItem{
+        height: 135px;
+        width: 30%;
+        margin: 5px 1.3%;
     }
 
     .overlay button{ 
@@ -89,19 +98,24 @@
     .gridItem{
         height: 120px;
         width: 30%;
-        margin: 5px 1.5%;
+        margin: 5px 1.3%;
     }
 
     .overlay svg{
         width: 20px;
     }
+
+    .overlay button{ 
+        right: -25%;
+        top: 0;
+    }
 }
 
 @media screen and (max-width: 300px) {
     .gridItem{
-        height: 120px;
+        height: 100px;
         width: 30%;
-        margin: 5px 1.5%;
+        margin: 5px 1.3%;
     }
 
     .overlay li{
